column is named clicks, not downloads

--- a/notebooks/exercises/Beta distribution for regularizing CTRs.ipynb
+++ b/notebooks/exercises/Beta distribution for regularizing CTRs.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "### Some example data\n",
     "\n",
-    "This data has impressions and downloads, which we will convert to `ctr`."
+    "This data has impressions and clicks, which we will convert to `ctr`."
    ]
   },
   {
@@ -277,7 +277,7 @@
    "outputs": [],
    "source": [
     "# caculate adjusted CTR\n",
-    "ducks['adjusted_ctr'] = (alpha + ducks['downloads']) / (alpha + beta + ducks['impressions'])\n",
+    "ducks['adjusted_ctr'] = (alpha + ducks['clicks']) / (alpha + beta + ducks['impressions'])\n",
     "ducks"
    ]
   },
