--- a/notebooks/exercises/Beta distribution for regularizing CTRs.ipynb
+++ b/notebooks/exercises/Beta distribution for regularizing CTRs.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
    "source": [
     "### Some example data\n",
     "\n",
-    "This data has impressions and clicks, which we will convert to `ctr`."
+    "This data has impressions and downloads, which we will convert to `ctr`."
    ]
   },
   {
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "# create a new column for CTR\n",
-    "df['ctr'] = df['___'] / df['____']"
+    "df['ctr'] = df['clicks'] / df['impressions']"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "# calculate the average CTR as a variable\n",
-    "mean_ctr = stats._____(df['____'])"
+    "mean_ctr = stats.mean(df['ctr'])"
    ]
   },
   {
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "# calculate the variance CTR\n",
-    "var_ctr = stats._____(df['____'])"
+    "var_ctr = stats.variance(df['ctr'])"
    ]
   },
   {
@@ -191,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
