--- a/notebooks/elasticsearch/tmdb/netfix movies.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies.ipynb
@@ -204,7 +204,7 @@
     "                                               leafs=20,\n",
     "                                               trees=20,\n",
     "                                               kcv=15,\n",
-    "                                               features=[1,2,7],\n",
+    "                                               features=[1,2,5,7],\n",
     "                                               featureSet='title')\n",
     "\n",
     "print()\n",
@@ -511,7 +511,7 @@
     "    return base_doc\n",
     "\n",
     "movies=indexable_movies(movies='data/tmdb.json', enrich=add_collection_name)\n",
-    "rebuild(client, index='tmdb', doc_src=movies)"
+    "rebuild(client, index='tmdb', doc_src=movies, force=True)"
    ]
   },
   {
@@ -721,23 +721,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ltr import search\n",
-    "search(client, \"cartoon with basketball aliens\", modelName='title2')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from ltr.MART_model import eval_model\n",
     "from itertools import groupby\n",
@@ -747,7 +730,7 @@
     "for qid, query_judgments in groupby(ftr_logger.logged, key=lambda j: j.qid):\n",
     "    print(qid)\n",
     "    if qid == 1: # Rambo\n",
-    "        model = eval_model(modelName='title',\n",
+    "        model = eval_model(modelName='title2',\n",
     "                               features=features,\n",
     "                               judgments=query_judgments)\n",
     "\n",
