--- a/notebooks/exercises/Beta distribution for regularizing CTRs.ipynb
+++ b/notebooks/exercises/Beta distribution for regularizing CTRs.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,141 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>resource_id</th>\n",
-       "      <th>term</th>\n",
-       "      <th>impressions</th>\n",
-       "      <th>downloads</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>40</td>\n",
-       "      <td>background</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>40</td>\n",
-       "      <td>glass</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>40</td>\n",
-       "      <td>guitar</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>40</td>\n",
-       "      <td>metal texture</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>40</td>\n",
-       "      <td>patterns</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048570</th>\n",
-       "      <td>237224</td>\n",
-       "      <td>pattern background</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048571</th>\n",
-       "      <td>237224</td>\n",
-       "      <td>patterns</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048572</th>\n",
-       "      <td>237224</td>\n",
-       "      <td>school</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048573</th>\n",
-       "      <td>237224</td>\n",
-       "      <td>scribble</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048574</th>\n",
-       "      <td>237224</td>\n",
-       "      <td>stripe</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1048575 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         resource_id                term  impressions  downloads\n",
-       "0                 40          background            3          1\n",
-       "1                 40               glass            7          1\n",
-       "2                 40              guitar            8          1\n",
-       "3                 40       metal texture            9          1\n",
-       "4                 40            patterns            9          1\n",
-       "...              ...                 ...          ...        ...\n",
-       "1048570       237224  pattern background            4          1\n",
-       "1048571       237224            patterns            3          1\n",
-       "1048572       237224              school            3          1\n",
-       "1048573       237224            scribble           10          1\n",
-       "1048574       237224              stripe            4          1\n",
-       "\n",
-       "[1048575 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# read-in the downloaded data\n",
     "df = pd.read_csv(\"click_log.csv\")\n",
@@ -179,7 +47,7 @@
    "outputs": [],
    "source": [
     "# create a new column for CTR\n",
-    "df['ctr'] = df['___'] / df['____']"
+    "df['ctr'] = df['clicks'] / df['impressions']"
    ]
   },
   {
@@ -189,7 +57,7 @@
    "outputs": [],
    "source": [
     "# calculate the average CTR as a variable\n",
-    "mean_ctr = stats._____(df['____'])"
+    "mean_ctr = stats.mean(df['ctr'])"
    ]
   },
   {
@@ -199,7 +67,7 @@
    "outputs": [],
    "source": [
     "# calculate the variance CTR\n",
-    "var_ctr = stats._____(df['____'])"
+    "var_ctr = stats.variance(df['ctr'])"
    ]
   },
   {
@@ -277,7 +145,7 @@
    "outputs": [],
    "source": [
     "# caculate adjusted CTR\n",
-    "ducks['adjusted_ctr'] = (alpha + ducks['downloads']) / (alpha + beta + ducks['impressions'])\n",
+    "ducks['adjusted_ctr'] = (alpha + ducks['clicks']) / (alpha + beta + ducks['impressions'])\n",
     "ducks"
    ]
   },
@@ -300,78 +168,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### A small salient example of shrinkage rate\n",
-    "\n",
-    "See this at query scale can be over-whelming. This sections is about seeing what happens with only a few data points. You are encouraged to change the clicks and impressions values."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df2 = pd.DataFrame(\n",
-    "    data = {\n",
-    "        'id': [1,2,3],\n",
-    "        'clicks': [1, 1, 1],\n",
-    "        'impressions': [2, 9, 99]\n",
-    "    }\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2['ctr_raw'] = ____"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2['ctr_adjusted'] = ____"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2 = pd.melt(df2[['id', 'ctr_raw', 'ctr_adjusted']], id_vars='id', value_vars=['ctr_raw', 'ctr_adjusted'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "{\n",
-    "    p9.ggplot(df2, p9.aes(_____, _____ color = 'variable')) +\n",
-    "    p9.geom_vline(xintercept = _______, linetype='dashed') + # global expected CTR\n",
-    "    p9.geom_point() +\n",
-    "    p9.scale_x_log10()\n",
-    "}"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -390,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
