--- a/notebooks/solr/tmdb/netfix movies(Solr).ipynb
+++ b/notebooks/solr/tmdb/netfix movies(Solr).ipynb
@@ -294,7 +294,7 @@
     "                                               trees=20,\n",
     "                                               kcv=15,\n",
     "                                               featureCost=0.1,# adjustedNDCG = NDCG * ( (1.0-cost) ^ num_features)\n",
-    "                                               features=[1,2,3,4,5,6,7],\n",
+    "                                               features=[1,2,5,7],\n",
     "                                               featureSet='title')\n",
     "\n",
     "print()\n",
@@ -341,7 +341,7 @@
     "\n",
     "for qid, query_judgments in groupby(training_set, key=lambda j: j.qid):\n",
     "    print(qid)\n",
-    "    if qid == 1: # Rambo\n",
+    "    if qid == 40: # Star Wars\n",
     "        model = eval_model(modelName='title',\n",
     "                               features=features,\n",
     "                               judgments=query_judgments)\n",
@@ -464,7 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Examine problem doc 319074\n",
+    "## Examine problem doc 85783\n",
     "\n",
     "(notice nothing mentions 'star wars')"
    ]
@@ -475,7 +475,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.get_doc(index='tmdb', doc_id=1368)"
+    "client.get_doc(index='tmdb', doc_id=85783)"
    ]
   },
   {
@@ -494,7 +494,7 @@
    "outputs": [],
    "source": [
     "from ltr.helpers.movies import get_movie\n",
-    "get_movie(1368)"
+    "get_movie(1892)"
    ]
   },
   {
@@ -518,11 +518,7 @@
     "def add_collection_and_char_name(src_movie, base_doc):\n",
     "    if 'belongs_to_collection' in src_movie and src_movie['belongs_to_collection'] is not None:\n",
     "        if 'name' in src_movie['belongs_to_collection']:\n",
-    "            base_doc['collection_name_en'] = src_movie['belongs_to_collection']['name']\n",
-    "            \n",
-    "    if 'cast' in src_movie and src_movie['cast'] is not None:\n",
-    "        characters = [cast['character'] for cast in get_movie(1368)['cast']][:5]\n",
-    "        base_doc['top_cast_en'] = characters\n",
+    "            base_doc['collection_name_en'] = src_movie['belongs_to_collection']['name']            \n",
     "    return base_doc\n",
     "\n",
     "movies=indexable_movies(movies='data/tmdb.json', enrich=add_collection_and_char_name)\n",
@@ -768,282 +764,7 @@
    "outputs": [],
    "source": [
     "from ltr import search\n",
-    "search(client, \"titanic\", modelName='title2')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Examine Model 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ltr.MART_model import eval_model\n",
-    "from itertools import groupby\n",
-    "\n",
-    "features, _ = client.feature_set(index='tmdb', name='title2')\n",
-    "\n",
-    "for qid, query_judgments in groupby(training_set, key=lambda j: j.qid):\n",
-    "    if qid == 1:\n",
-    "        model = eval_model(modelName='title',\n",
-    "                           features=features,\n",
-    "                           judgments=query_judgments)\n",
-    "\n",
-    "        print()\n",
-    "        print(\"## Evaluating graded docs for search keywords 'Rambo'\")\n",
-    "        print()\n",
-    "        print(model)\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "whoopsies = model.whoopsies()\n",
-    "for qid, whoopsie in whoopsies.items():\n",
-    "    print(\"== QID %s ==\" % qid)\n",
-    "    print(\"%s - %s\" % (whoopsie.count, whoopsie.totalMagnitude))\n",
-    "    print(whoopsie.perTreeReport())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```\n",
-    "== QID 1 ==\n",
-    "10 - 40\n",
-    "tree:0=>0(319074)-4(1368);tree:1=>0(319074)-4(1368);tree:2=>0(319074)-4(1368);tree:3=>0(319074)-4(1368);tree:4=>0(319074)-4(1368);tree:5=>0(319074)-4(1368);tree:6=>0(319074)-4(1368);tree:7=>0(319074)-4(1368);tree:8=>0(319074)-4(1368);tree:9=>0(319074)-4(1368)\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_movie(319074)['title']\n",
-    "#from ltr.helpers.movies import get_movie\n",
-    "#[cast['character'] for cast in get_movie(1368)['cast']][:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!java -jar /var/folders/vc/thmh159x5xddb6_cgtx778sc0000gn/T/RankyMcRankFace.jar"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.reset_ltr(index='tmdb')\n",
-    "\n",
-    "\n",
-    "config = [\n",
-    "    #1\n",
-    "    {\n",
-    "      \"name\" : \"title_has_phrase\",\n",
-    "      \"store\": \"title3\",\n",
-    "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : {\n",
-    "        \"q\" : \"title:\\\"${keywords})\\\"^=1\"\n",
-    "      }\n",
-    "    },\n",
-    "    #2\n",
-    "    {\n",
-    "      \"name\" : \"title_has_terms\",\n",
-    "      \"store\": \"title3\",\n",
-    "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : {\n",
-    "        \"q\" : \"title:(${keywords})^=1\"\n",
-    "      }\n",
-    "    },\n",
-    "    #3\n",
-    "    {\n",
-    "      \"name\" : \"title_bm25\",\n",
-    "      \"store\": \"title3\",\n",
-    "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : {\n",
-    "        \"q\" : \"title:(${keywords})\"\n",
-    "      }\n",
-    "    },\n",
-    "    #4\n",
-    "    {\n",
-    "      \"name\" : \"overview_bm25\",\n",
-    "      \"store\": \"title3\",\n",
-    "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : {\n",
-    "        \"q\" : \"overview:(${keywords})\"\n",
-    "      }\n",
-    "    },\n",
-    "    #5\n",
-    "    {\n",
-    "      \"name\" : \"overview_phrase_bm25\",\n",
-    "      \"store\": \"title3\",\n",
-    "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : {\n",
-    "        \"q\" : \"overview:\\\"${keywords}\\\"\"\n",
-    "      }\n",
-    "    },\n",
-    "    #6\n",
-    "    {\n",
-    "      \"name\" : \"title_fuzzy\",\n",
-    "      \"store\": \"title3\",\n",
-    "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : {\n",
-    "        \"q\" : \"{!lucene df=title}${keywords}~\"\n",
-    "      }\n",
-    "    },\n",
-    "    #7\n",
-    "    {\n",
-    "      \"name\" : \"release_year\",\n",
-    "      \"store\": \"title3\",\n",
-    "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : {\n",
-    "        \"q\" : \"{!func}def(release_year,2000)\"\n",
-    "      }\n",
-    "    },\n",
-    "    #8 Collection Name BM25 Score\n",
-    "    {\n",
-    "      \"name\" : \"coll_name_bm25\",\n",
-    "      \"store\": \"title3\",\n",
-    "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : {\n",
-    "        \"q\" : \"collection_name_en:(${keywords})\"\n",
-    "      }\n",
-    "    },\n",
-    "    #9 Collection Name Phrase BM25 Score\n",
-    "    {\n",
-    "      \"name\" : \"coll_name_phrase_bm25\",\n",
-    "      \"store\": \"title3\",\n",
-    "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : {\n",
-    "        \"q\" : \"collection_name_en:\\\"${keywords}\\\"\"\n",
-    "      }\n",
-    "    },\n",
-    "    #10 Vote average!\n",
-    "    {\n",
-    "      \"name\" : \"vote_average_raw\",\n",
-    "      \"store\": \"title3\",\n",
-    "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : {\n",
-    "        \"q\" : \"{!func}def(vote_average,0.5)\"\n",
-    "      }\n",
-    "    },\n",
-    "    #11 Sci Fi \n",
-    "    {\n",
-    "        \"store\": \"title3\",\n",
-    "        \"name\" : \"is_sci_fi\",\n",
-    "        \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "        \"params\" : {\n",
-    "          \"q\" : \"genres:\\\"Science Fiction\\\"^=2.0\"\n",
-    "        }\n",
-    "    },\n",
-    "    #12 Action\n",
-    "    {\n",
-    "        \"store\": \"title3\",\n",
-    "        \"name\" : \"is_action\",\n",
-    "        \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "        \"params\" : {\n",
-    "          \"q\" : \"genres:\\\"Action\\\"^=2.0\"\n",
-    "        }\n",
-    "    },\n",
-    "]\n",
-    "\n",
-    "\n",
-    "client.create_featureset(index='tmdb', name='title3', ftr_config=config)\n",
-    "\n",
-    "from ltr.judgments import judgments_open\n",
-    "from ltr.log import FeatureLogger\n",
-    "from itertools import groupby\n",
-    "\n",
-    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='title3')\n",
-    "with judgments_open('data/title_judgments.txt') as judgment_list:\n",
-    "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
-    "        ftr_logger.log_for_qid(qid=qid, \n",
-    "                               judgments=query_judgments,\n",
-    "                               keywords=judgment_list.keywords(qid))\n",
-    "        \n",
-    "training_set=ftr_logger.logged"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ltr.ranklib import feature_search\n",
-    "rankLibResult, ndcgPerFeature = feature_search(client,\n",
-    "                                               training_set=training_set,\n",
-    "                                               metric2t='NDCG@10',\n",
-    "                                               leafs=10,\n",
-    "                                               trees=20,\n",
-    "                                               kcv=3,\n",
-    "                                               features=[1,3,4,5,7,8,10,11,12],\n",
-    "                                               #features=[11,12],\n",
-    "                                               featureSet='title3')\n",
-    "\n",
-    "print()\n",
-    "print(\"Impact of each feature on the model\")\n",
-    "trainLogs = rankLibResult.trainingLogs\n",
-    "for ftrId, impact in trainLogs[-1].impacts.items():\n",
-    "    print(\"{} - {}\".format(client.get_feature_name(config, ftrId), impact))\n",
-    "    \n",
-    "for roundDcg in trainLogs[-1].rounds:\n",
-    "    print(roundDcg)\n",
-    "    \n",
-    "print(\"Avg NDCG@10 when feature included:\")\n",
-    "for ftrId, ndcg in ndcgPerFeature.items():\n",
-    "    print(\"%s => %s\" % (ftrId, ndcg))\n",
-    "    \n",
-    "print(\"Avg K-Fold NDCG@10 %s\" % rankLibResult.kcvTestAvg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ltr.ranklib import train\n",
-    "trainResponse  = train(client,\n",
-    "                  training_set=training_set,\n",
-    "                  metric2t='NDCG@10',\n",
-    "                  leafs=20,\n",
-    "                  trees=20,\n",
-    "                  features=[1,3,4,7,8],\n",
-    "                  featureSet='title3',\n",
-    "                  index='tmdb',\n",
-    "                  modelName='title3')\n",
-    "\n",
-    "trainLog = trainResponse.trainingLogs[0]\n",
-    "\n",
-    "print()\n",
-    "print(\"Impact of each feature on the model\")\n",
-    "for ftrId, impact in trainLog.impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
-    "    \n",
-    "for roundDcg in trainLog.rounds:\n",
-    "    print(roundDcg)\n",
-    "    \n",
-    "print(\"Train NDCG@10 %s\" % trainLog.rounds[-1])"
+    "search(client, \"star wars\", modelName='title2')"
    ]
   },
   {
@@ -1056,7 +777,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1070,7 +791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
