use the correct method name

--- a/notebooks/elasticsearch/tmdb/bayesian-optimization.ipynb
+++ b/notebooks/elasticsearch/tmdb/bayesian-optimization.ipynb
@@ -282,14 +282,14 @@
    ],
    "source": [
     "from ltr.log import FeatureLogger\n",
-    "from ltr.judgments import judgments_open, to_dataframe\n",
+    "from ltr.judgments import judgments_open, judgments_to_dataframe\n",
     "from itertools import groupby\n",
     "\n",
     "judgments_dataframe = None\n",
     "\n",
     "with judgments_open('data/title_judgments.txt') as judgment_list:\n",
     "    print(dir(judgment_list))\n",
-    "    judgments_dataframe = to_dataframe(judgment_list)\n",
+    "    judgments_dataframe = judgments_to_dataframe(judgment_list)\n",
     "    \n",
     "judgments_dataframe"
    ]
