Remove references to lambdas_per_query that are None.

--- a/notebooks/elasticsearch/tmdb/lambda-mart-in-python.ipynb
+++ b/notebooks/elasticsearch/tmdb/lambda-mart-in-python.ipynb
@@ -3231,15 +3231,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lambdas_per_query.iloc[282]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "ensemble[0].predictions"
    ]
   },
@@ -3283,7 +3274,9 @@
    "source": [
     "## Examine queries we learned\n",
     "\n",
-    "Try out some queries, look at the final model prediction `last_prediction` compare to the correct ordering `grade`."
+    "Try out some queries, look at the final model prediction `last_prediction` compare to the correct ordering `grade`.\n",
+    "\n",
+    "NB: the notebook is referencing lambdas_per_query, which is None at this point in the book"
    ]
   },
   {
@@ -3292,7 +3285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lambdas_per_query[lambdas_per_query['qid'] == 2]"
+    "#lambdas_per_query[lambdas_per_query['qid'] == 2]"
    ]
   },
   {
