--- a/notebooks/click models.ipynb
+++ b/notebooks/click models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,9 +71,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {'rambo': [(0, 11.11111111111111),\n",
+       "              (4, 6.666666666666667),\n",
+       "              (3, 5.555555555555555),\n",
+       "              (1, 2.6666666666666665),\n",
+       "              (2, 0.0),\n",
+       "              (9, 0.0),\n",
+       "              (7, 0.0)],\n",
+       "             'star trek': [(9, 33.333333333333336),\n",
+       "              (6, 6.666666666666667),\n",
+       "              (8, 6.666666666666667),\n",
+       "              (7, 6.666666666666667),\n",
+       "              (3, 5.0),\n",
+       "              (1, 4.166666666666667),\n",
+       "              (5, 3.3333333333333335),\n",
+       "              (2, 1.6666666666666667),\n",
+       "              (0, 0.0),\n",
+       "              (4, 0.0)]})"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "coec_judgments"
    ]
@@ -91,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,18 +130,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.9987182876053634,\n",
+       " 0.9999889839385798,\n",
+       " 0.9999999990640687,\n",
+       " 0.44523038207622834]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.ranks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(4, 1.0),\n",
+       " (3, 0.9989838560294817),\n",
+       " (0, 0.747358098424573),\n",
+       " (1, 0.4003830084292817),\n",
+       " (9, 4.113007892053103e-81),\n",
+       " (7, 4.113007892053103e-81),\n",
+       " (2, 4.076400940523653e-131)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pbm_judgments['rambo']"
    ]
@@ -302,7 +361,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -316,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
