updating to use opensearch/updated test.sh to allow some dynamic instantiation of solr, elasticsearch, opensearch
Signed-off-by: Mark Cohen <markcoh@amazon.com>

--- a/notebooks/opensearch/tmdb/gonna need a bigger bot (ES).ipynb
+++ b/notebooks/opensearch/tmdb/gonna need a bigger bot (ES).ipynb
@@ -30,12 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.client import ElasticClient\n",
-    "client = ElasticClient()"
+    "from ltr.client import OpenSearchClient\n",
+    "client = OpenSearchClient()"
    ]
   },
   {
@@ -47,9 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/tmdb.json already exists\n",
+      "GET http://es-learn-to-rank.labs.o19s.com/genome_judgments.txt\n"
+     ]
+    }
+   ],
    "source": [
     "from ltr import download\n",
     "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
