--- a/notebooks/opensearch/tmdb/netfix movies-random-forests.ipynb
+++ b/notebooks/opensearch/tmdb/netfix movies-random-forests.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Elastic Client"
+    "# OpenSearch Client"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.client import ElasticClient\n",
-    "client = ElasticClient()"
+    "from ltr.client import OpenSearchClient\n",
+    "client = OpenSearchClient()"
    ]
   },
   {
@@ -28,9 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/tmdb.json already exists\n",
+      "data/title_judgments.txt already exists\n",
+      "Index tmdb already exists. Use `force = True` to delete and recreate\n"
+     ]
+    }
+   ],
    "source": [
     "def add_collection_name(src_movie, base_doc):\n",
     "    if 'belongs_to_collection' in src_movie and src_movie['belongs_to_collection'] is not None:\n",
@@ -63,9 +73,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed Default LTR feature store [Status: 200]\n",
+      "Initialize Default LTR feature store [Status: 200]\n",
+      "Create title_rf feature set [Status: 201]\n"
+     ]
+    }
+   ],
    "source": [
     "client.reset_ltr(index='tmdb')\n",
     "\n",
@@ -181,9 +201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recognizing 40 queries\n"
+     ]
+    }
+   ],
    "source": [
     "from ltr.log import FeatureLogger\n",
     "from ltr.judgments import judgments_open\n",
@@ -208,9 +236,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/RankyMcRankFace.jar already exists\n",
+      "Running java -jar /var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/RankyMcRankFace.jar -ranker 8 -shrinkage 0.1 -metric2t NDCG@10 -tree 100 -bag 1 -leaf 4 -frate 0.5 -srate 1.0 -train /var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/training.txt -save data/title_rf_model.txt  -feature /var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/features.txt -kcv 5 \n",
+      "\n",
+      "Impact of each feature on the model\n",
+      "title_fuzzy - 58.98475855415306\n",
+      "title_bm25 - 2.270030212189714\n",
+      "overview_bm25 - 0.5272996580514282\n",
+      "Test NDCG@10 0.8597\n"
+     ]
+    }
+   ],
    "source": [
     "from ltr.ranklib import train\n",
     "res  = train(client,\n",
@@ -245,9 +288,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/RankyMcRankFace.jar already exists\n",
+      "Running java -jar /var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/RankyMcRankFace.jar -ranker 8 -shrinkage 0.1 -metric2t NDCG@10 -tree 100 -bag 3 -leaf 4 -frate 0.5 -srate 1.0 -train /var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/training.txt -save data/title_rf_model.txt  -feature /var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/features.txt\n",
+      "Delete model title_rf: 404\n",
+      "Created Model title_rf [Status: 201]\n",
+      "Model saved\n"
+     ]
+    }
+   ],
    "source": [
     "from ltr.ranklib import train\n",
     "res  = train(client,\n",
@@ -274,7 +329,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -288,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
