--- a/notebooks/opensearch/tmdb/raw-es-commands.ipynb
+++ b/notebooks/opensearch/tmdb/raw-es-commands.ipynb
@@ -2,24 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
     "\n",
-    "from ltr.client import ElasticClient\n",
-    "client = ElasticClient()\n",
+    "from ltr.client import OpenSearchClient\n",
+    "client = OpenSearchClient()\n",
     "\n",
     "host = client.get_host()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/tmdb.json already exists\n",
+      "Created index tmdb [Status: 200]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 27846/27846 [02:13<00:00, 208.92it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Streaming Bulk index DONE tmdb [Status: 201]\n"
+     ]
+    }
+   ],
    "source": [
     "# Rebuild the index if necessary\n",
     "from ltr import download\n",
@@ -43,11 +66,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:9201/_ltr/\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "<Response [200]>"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "url = 'http://{}:9200/_ltr/'.format(host)\n",
+    "url = 'http://{}:9201/_ltr/'.format(host)\n",
     "print(url)\n",
     "requests.delete(url)"
    ]
@@ -61,11 +100,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:9201/_ltr/\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "<Response [200]>"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "url = 'http://{}:9200/_ltr/'.format(host)\n",
+    "url = 'http://{}:9201/_ltr/'.format(host)\n",
     "print(url)\n",
     "requests.put(url)"
    ]
@@ -81,9 +136,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:9200/_ltr/_featureset/my_feature_set\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "<Response [400]>"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "feature_set = {\n",
     "   \"featureset\": {\n",
@@ -154,9 +225,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:9200/tmdb/_search\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'hits'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/ipykernel_22620/1296524875.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m     35\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0murl\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     36\u001B[0m \u001B[0mresp\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mrequests\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mget\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0murl\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mjson\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0msearch_with_log\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mjson\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 37\u001B[0;31m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mjson\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mdumps\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mresp\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m'hits'\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m'hits'\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mindent\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;36m2\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;31mKeyError\u001B[0m: 'hits'"
+     ]
+    }
+   ],
    "source": [
     "search_with_log = {\n",
     "  \"query\": {\n",
@@ -239,7 +329,7 @@
    "metadata": {},
    "source": [
     "## Uploading a Model\n",
-    "Once features have been logged and training data has been generated, a model can be pushed into Elasticsearch.  The following shows what a request to PUT a new model looks like."
+    "Once features have been logged and training data has been generated, a model can be pushed into OpenSearch.  The following shows what a request to PUT a new model looks like."
    ]
   },
   {
@@ -338,7 +428,7 @@
     "  }\n",
     "}\n",
     "\n",
-    "url = 'http://{}:9200/_ltr/_featureset/my_feature_set/_createmodel'.format(host)\n",
+    "url = 'http://{}:9201/_ltr/_featureset/my_feature_set/_createmodel'.format(host)\n",
     "print(url)\n",
     "requests.post(url, json=create_model).json()"
    ]
@@ -368,7 +458,7 @@
     "  }\n",
     "}\n",
     "\n",
-    "url = 'http://{}:9200/tmdb/_search'.format(host)\n",
+    "url = 'http://{}:9201/tmdb/_search'.format(host)\n",
     "resp = requests.get(url, json=search).json()"
    ]
   },
