--- a/notebooks/opensearch/tmdb/sandbox.ipynb
+++ b/notebooks/opensearch/tmdb/sandbox.ipynb
@@ -17,12 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.client import ElasticClient\n",
-    "client = ElasticClient()"
+    "from ltr.client import OpenSearchClient\n",
+    "client = OpenSearchClient()"
    ]
   },
   {
